1, 修改List翻译为原先的翻译逻辑 2，修改语言token删除的位置 3， 在邮件发送前修改进度条状态为写入